<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="hello">Hello World, SnaphMainActivity!</string>
    <string name="app_name">Snaph</string>
    
    <string name="login_name">Welcome to Snaph</string>
    <string name="login_button">Login using Facebook</string>
     <string name="logout_button">Logout</string>
     
    <string name="form_title">Title</string>
    <string name="form_price">Price</string>
    <string name="form_description">Description</string>
    
    <string name="snap_button">Snap Photo!</string>
    <string name="upload_form">Upload Form</string>
    <string name="upload_button">Upload</string>
    <string name="cancel_button">Cancel</string>
    
    <string name="text_content_description">Upload the image of the (?) you want to sell!</string>
    <string name="snap_image_button">Snap image</string>
    <string name="from_gallery_button">Upload from Gallery</string>

</resources>