<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <ScrollView 
         android:layout_width="fill_parent"
    	 android:layout_height="wrap_content"
   		 android:layout_weight="1">
	    <LinearLayout
	         android:layout_width="fill_parent"
	    	 android:layout_height="wrap_content"
	    	 android:orientation="vertical">
	    	 
		    <ImageView
		        android:id="@+id/image"
		        android:layout_width="wrap_content"
		        android:layout_height="0dp"
		        android:layout_gravity="center_horizontal"
		        android:layout_weight="2.28"
		        android:contentDescription="@string/text_content_description"
		        android:paddingBottom="10dp"
		        android:paddingTop="10dp"
		       	android:adjustViewBounds="true"/>
		     
		     <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/form_title" />
		     
		     <EditText 
		         android:id="@+id/title"
		         android:layout_width="fill_parent"
		         android:layout_height="wrap_content"
		         android:inputType="text"/>
		     
		      <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/form_price" />
		     
		     <EditText 
		         android:id="@+id/price"
		         android:layout_width="fill_parent"
		         android:layout_height="wrap_content"
		         android:inputType="numberDecimal"/>
		     
		      <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/form_description" />
		     
		     <EditText 
		         android:id="@+id/description"
		         android:layout_width="fill_parent"
		         android:layout_height="wrap_content"
		         android:inputType="textMultiLine"
		         android:gravity="top"/>
		  </LinearLayout>
	  </ScrollView>
    
      <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
         android:layout_weight="0">
         
	    <Button
	        android:id="@+id/upload_photo"
	        android:layout_width="159dp"
	        android:layout_height="wrap_content"
	        android:text="@string/upload_button" />
      
         <Button 
             android:id="@+id/cancel_upload"
             android:text="@string/cancel_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onCancel"/>
         
       </LinearLayout>
    
</LinearLayout>